# path-and-offload

./: .gitignore  CMakeLists.txt  LoRa.h  Point.h  SF.h  Sensor.h  SpreadingFactor.h  energy.h  generate_roi_grid.h  geo_utils.h  main.cpp  neighborhood.h  read_data.h
instances/10/: w-random-1000x1000-n10-z0-s6.txt
instances/100/: w-random-1000x1000-n100-z0-s3.txt
instances/20/: w-random-1000x1000-n20-z0-s8.txt
instances/40/: w-random-1000x1000-n40-z0-s6.txt
instances/5/: w-random-1000x1000-n5-z0-s6.txt
instances/50/: w-random-1000x1000-n50-z0-s8.txt
instances/500/: w-random-1000x1000-n500-z0-s7.txt
